sass (takeCollage): fix button size on small screens

--- a/src/sass/partials/_button.scss
+++ b/src/sass/partials/_button.scss
@@ -92,7 +92,8 @@
 }
 
 @media screen and (max-width: 1024px) {
-  .takePic {
+  .takePic,
+  .takeCollage {
     padding: 10px 10px;
   }
 }
